added canvas-wrapper to pakage.json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "cheerio": "^1.0.0-rc.2",
-    "d3-dsv": "^1.0.8"
+    "d3-dsv": "^1.0.8",
+    "canvas-wrapper": "git://github.com/byuitechops/canvas-wrapper.git"
   }
 }
