--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "async": "^2.6.0",
     "cheerio": "^1.0.0-rc.2",
     "d3-dsv": "^1.0.8",
-    "canvas-wrapper": "git://github.com/byuitechops/canvas-wrapper.git"
+    "canvas-wrapper": "byuitechops/canvas-wrapper"
   }
 }
