Inputting quizzes into Canvas

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/byuitechops/ec3-csv-to-canvas.git"
   },
-  "author": "Ema Fisher",
+  "author": "Emma Fisher",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/byuitechops/ec3-csv-to-canvas/issues"
